[Android WebAPK] Clear back history when navigating WebAPK from deep link

The CL does this by plumbing LoadUrlParams::should_clear_history_list to Java

BUG=735074

Change-Id: I5a7c42abc70b7a6f6175c53156faae9a988faee0
Reviewed-on: https://chromium-review.googlesource.com/573115
Commit-Queue: Peter Kotwicz <pkotwicz@chromium.org>
Reviewed-by: Xi Han <hanxi@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488853}
Former-commit-id: 5f8fd9e4d2185d6c48f592f4b9f05de1ca04ac17