chrome/browser/android/tab_android.h
@@ -180,7 +180,8 @@ class TabAndroid : public CoreTabHelperDelegate,
       jboolean is_renderer_initiated,
       jboolean should_replace_current_entry,
       jlong intent_received_timestamp,
-      jboolean has_user_gesture);
+      jboolean has_user_gesture,
+      jboolean should_clear_history_list);
   void SetActiveNavigationEntryTitleForUrl(
       JNIEnv* env,
       const base::android::JavaParamRef<jobject>& obj,
