content/public/android/java/src/org/chromium/content_public/browser/LoadUrlParams.java
@@ -43,6 +43,7 @@ public class LoadUrlParams {
     boolean mShouldReplaceCurrentEntry;
     long mIntentReceivedTimestamp;
     boolean mHasUserGesture;
+    boolean mShouldClearHistoryList;
 
     /**
      * Creates an instance with default page transition type.
@@ -467,6 +468,16 @@ public class LoadUrlParams {
      */
     public boolean getHasUserGesture() {
         return mHasUserGesture;
+    }
+
+    /** Sets whether session history should be cleared once the navigation commits. */
+    public void setShouldClearHistoryList(boolean shouldClearHistoryList) {
+        mShouldClearHistoryList = shouldClearHistoryList;
+    }
+
+    /** Returns whether session history should be cleared once the navigation commits. */
+    public boolean getShouldClearHistoryList() {
+        return mShouldClearHistoryList;
     }
 
     public boolean isBaseUrlDataScheme() {
